Clean up gas loader and ignore invalid hex values